# cardano-addresses

./: .dockerignore  .gitattributes  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  .weeder.yaml  404.html  CLAUDE.md  CNAME  CODE-OF-CONDUCT.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  cabal-wasm.project  cabal.project  cabal.project.freeze  cardano-addresses.cabal  default.nix  docusaurus.config.js  flake.nix  hie-cabal.yaml  index.html  justfile  package-lock.json  package.json  package.yaml  release.nix  shell.nix  sidebars.js  sitemap.xml  stack.yaml
.coverage/: cardano-addresses-cli.overlay  cardano-addresses.overlay  template.overlay
api/: cardano-addresses-api.cabal
api/exe/: Main.hs
api/jsbits/: runmain.js  test.js
api/lib/Cardano/Address/: Api.hs
api/lib/Cardano/Address/Api/: InspectAddress.hs  Version.hs
api/test/: Main.hs
app/: Main.hs
browser/: Main.hs  serve.sh
cbits/: crypton_pbkdf2.h  crypton_sha512.h  encrypted_sign.c  hmac.h
command-line/: .cardano-addresses-cli.cabal.swp  cardano-addresses-cli.cabal  index.html  package.yaml
core/: cardano-addresses.cabal  package.yaml
core/lib/Cardano/: Address.hs  Mnemonic.hs  Multisig.hs  Script.hs  ScriptParser.hs
core/lib/Cardano/Address/: .#KeyHash.hs  Compat.hs  Derivation.hs  Errors.hs  Internal.hs  KeyHash.hs  Script.hs
core/lib/Cardano/Address/Script/: Parser.hs
core/lib/Cardano/Address/Style/: Byron.hs  Icarus.hs  Jormungandr.hs  Shared.hs  Shelley.hs
core/lib/Cardano/Codec/: Bech32.hs  Cbor.hs
core/lib/Cardano/Codec/Bech32/: Prefixes.hs
core/lib/Cardano/Script/: Parser.hs
core/lib/Codec/Binary/: Encoding.hs
core/lib/Data/: Word7.hs
core/test/: Main.hs
core/test/Cardano/: AddressSpec.hs  MultisigSpec.hs  ScriptParserSpec.hs  ScriptSpec.hs
core/test/Cardano/Address/: DerivationSpec.hs  ScriptSpec.hs
core/test/Cardano/Address/Script/: ParserSpec.hs
core/test/Cardano/Address/Style/: ByronSpec.hs  IcarusSpec.hs  JormungandrSpec.hs  SharedSpec.hs  ShelleySpec.hs
core/test/Cardano/Codec/: CborSpec.hs
core/test/Cardano/Script/: ParserSpec.hs
core/test/Test/: Arbitrary.hs
core/test/golden/addresses_5574d91d/: golden
core/test/golden/addresses_churn_shaft_spoon_second_erode_useless_thrive_burst_group_seed_element_sign_scrub_buffalo_jelly_grace_neck_useless/: golden
core/test/golden/addresses_draft_ability_female_child_jump_maid_roof_hurt_below_live_topple_paper_exclude_ordinary_coach_churn_sunset_emerge_blame_ketchup_much/: golden
core/test/golden/addresses_f30c9813/: golden
core/test/golden/addresses_test_walk_nut_penalty_hip_pave_soap_entry_language_right_filter_choice/: golden
core/test/golden/art_forum_devote_street_sure_rather_head_chuckle_guard_poverty_release_quote_oak_craft_enemy/: actual  golden
core/test/golden/churn_shaft_spoon_second_erode_useless_thrive_burst_group_seed_element_sign_scrub_buffalo_jelly_grace_neck_useless/: golden
core/test/golden/draft_ability_female_child_jump_maid_roof_hurt_below_live_topple_paper_exclude_ordinary_coach_churn_sunset_emerge_blame_ketchup_much/: golden
core/test/golden/excess_behave_track_soul_table_wear_ocean_cash_stay_nature_item_turtle_palm_soccer_lunch_horror_start_stumble_month_panic_right_must_lock_dress/: golden
core/test/golden/inspects_775fd04c/: golden
core/test/golden/inspectsart_forum_devote_street_sure_rather_head_chuckle_guard_poverty_release_quote_oak_craft_enemy/: golden
core/test/golden/inspectschurn_shaft_spoon_second_erode_useless_thrive_burst_group_seed_element_sign_scrub_buffalo_jelly_grace_neck_useless/: golden
core/test/golden/inspectsdraft_ability_female_child_jump_maid_roof_hurt_below_live_topple_paper_exclude_ordinary_coach_churn_sunset_emerge_blame_ketchup_much/: golden
core/test/golden/inspectsexcess_behave_track_soul_table_wear_ocean_cash_stay_nature_item_turtle_palm_soccer_lunch_horror_start_stumble_month_panic_right_must_lock_dress/: golden
core/test/golden/inspectstest_child_burst_immense_armed_parrot_company_walk_dog/: golden
core/test/golden/inspectstest_walk_nut_penalty_hip_pave_soap_entry_language_right_filter_choice/: golden
core/test/golden/test_child_burst_immense_armed_parrot_company_walk_dog/: golden
core/test/golden/test_walk_nut_penalty_hip_pave_soap_entry_language_right_filter_choice/: golden
coverage/: coverage.tix  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  index.html
demo/: index.html
docs/: command-line.md  index.md  webassembly-app.md
flake/: lib.nix
ghcjs/: build.sh  crypto-wrappers.js
haddock/: Cardano-Address-Derivation.html  Cardano-Address-Style-Byron.html  Cardano-Address-Style-Icarus.html  Cardano-Address.html  Cardano-AddressDerivation-Byron.html  Cardano-AddressDerivation-Icarus.html  Cardano-AddressDerivation.html  Cardano-Codec-Cbor.html  Cardano-Mnemonic.html  cardano-addresses.haddock  cardano-addresses.txt  doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  (+6 more)
jsapi/: .envrc  .gitignore  README.md  cardano-addresses-jsapi.cabal  default.nix  package-lock.json  package.json  tsconfig.json
jsapi/demo/: index.html  index.js  run.sh.in
jsapi/exe/: Main.hs
jsapi/glue/: postlude.esm.js  postlude.js  prelude.cjs.js  prelude.esm.js  runmain.js  test.js
jsapi/lib/Cardano/Address/: JSAPI.hs
jsapi/lib/Cardano/Address/JSAPI/: InspectAddress.hs  Version.hs
jsapi/src/: cardano-addresses.ts  cli.ts  foreign.d.ts  index.ts  types.ts
jsapi/test/: Main.hs  api.test.ts
jsbits/: README.md  cardano-addresses-jsbits.cabal  package.yaml
jsbits/emscripten/: build.sh  crypto-wrappers.js
jsbits/lib/Cardano/Address/: Jsbits.hs
jsbits/src/Cardano/Address/: Jsbits.hs
(+3635 files in other folders)
