cabal-version: 1.12

name:           cardano-addresses
version:        1.0.0
synopsis:       Library utilities for mnemonic generation and address derivation.
description:    Please see the README on GitHub at <https://github.com/input-output-hk/cardano-addresses>
category:       Cardano
homepage:       https://github.com/input-output-hk/cardano-addresses#readme
bug-reports:    https://github.com/input-output-hk/cardano-addresses/issues
author:         IOHK
maintainer:     operations@iohk.io
copyright:      2020 IOHK
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/cardano-addresses

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (!flag(development))
    ghc-options:
      -Werror
  exposed-modules:
      Cardano.AddressDerivation
      Cardano.AddressDerivation.Byron
      Cardano.AddressDerivation.Icarus
      Cardano.Codec.Cbor
      Cardano.Mnemonic
  other-modules:
      Paths_cardano_addresses
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , base58-bytestring
    , basement
    , bech32
    , bech32-th
    , bytestring
    , cardano-crypto
    , cborg
    , cryptonite
    , deepseq
    , digest
    , exceptions
    , extra
    , fmt
    , memory
    , text
    , transformers

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (!flag(development))
    ghc-options:
      -O2
      -Werror
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Cardano.AddressDerivationSpec
      Cardano.AddressDerivation.ByronSpec
      Cardano.AddressDerivation.IcarusSpec
      Cardano.Codec.CborSpec
      Cardano.MnemonicSpec
      Paths_cardano_addresses
      Test.Arbitrary
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , bytestring
    , cardano-addresses
    , cardano-crypto
    , hspec
    , memory
    , text
