cabal-version: 1.12

name:           cardano-addresses
version:        3.12.0
synopsis:       Library utilities for mnemonic generation and address derivation.
description:    Please see the README on GitHub at <https://github.com/IntersectMBO/cardano-addresses>
category:       Cardano
homepage:       https://github.com/IntersectMBO/cardano-addresses#readme
bug-reports:    https://github.com/IntersectMBO/cardano-addresses/issues
author:         IOHK
maintainer:     operations@iohk.io
copyright:      2021-2022 IOHK
license:        Apache-2.0
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/IntersectMBO/cardano-addresses

flag release
  description: Compile executables for a release.
  manual: True
  default: False

library
  exposed-modules:
      Cardano.Address
      Cardano.Address.Derivation
      Cardano.Address.Internal
      Cardano.Address.KeyHash
      Cardano.Address.Script
      Cardano.Address.Script.Parser
      Cardano.Address.Style.Byron
      Cardano.Address.Style.Icarus
      Cardano.Address.Style.Shared
      Cardano.Address.Style.Shelley
      Cardano.Codec.Bech32.Prefixes
      Cardano.Codec.Cbor
      Cardano.Mnemonic
      Codec.Binary.Encoding
      Data.Word7
  other-modules:
      Paths_cardano_addresses
  hs-source-dirs:
      lib
  default-extensions:
      NoImplicitPrelude
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints
  build-depends:
      aeson >= 2.0
    , base >=4.7 && <5
    , base58-bytestring
    , basement
    , bech32
    , bech32-th
    , binary
    , bytestring
    , cardano-crypto
    , cborg
    , containers
    , cryptonite
    , deepseq
    , digest
    , either
    , exceptions
    , extra
    , fmt
    , hashable
    , memory
    , text
    , unordered-containers
  if flag(release)
    ghc-options: -Werror
  default-language: Haskell2010

test-suite unit
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      AutoDiscover
      Cardano.Address.DerivationSpec
      Cardano.Address.Script.ParserSpec
      Cardano.Address.ScriptSpec
      Cardano.Address.Style.ByronSpec
      Cardano.Address.Style.IcarusSpec
      Cardano.Address.Style.SharedSpec
      Cardano.Address.Style.ShelleySpec
      Cardano.AddressSpec
      Cardano.Codec.CborSpec
      Cardano.MnemonicSpec
      Codec.Binary.EncodingSpec
      Data.Word7Spec
      Test.Arbitrary
      Paths_cardano_addresses
  hs-source-dirs:
      test
  default-extensions:
      NoImplicitPrelude
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      QuickCheck >=2.14.2
    , aeson >= 2.0
    , aeson-pretty
    , base >=4.7 && <5
    , bech32
    , binary
    , bytestring
    , cardano-addresses
    , cardano-crypto
    , cryptonite
    , containers
    , hspec
    , hspec-golden >=0.1.0.3 && <0.2
    , memory
    , pretty-simple
    , text
  if flag(release)
    ghc-options: -Werror
  default-language: Haskell2010
