cabal-version: 3.0
name:           cardano-addresses-jsapi
version:        3.12.0
synopsis:       Javascript FFI for cardano-addresses.
description:    This package provides functions callable from Javascript on top of
                which a TypeScript API can be built. It uses the cardano-addresses-ghcjs
                package to provide all dependencies  necessary for compilation under ghcjs
                and execution under a JavaScript interpreter.
category:       Cardano
homepage:       https://github.com/input-output-hk/cardano-addresses#readme
bug-reports:    https://github.com/input-output-hk/cardano-addresses/issues
author:         IOHK
maintainer:     operations@iohk.io
copyright:      2021 IOHK
license:        Apache-2.0
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/input-output-hk/cardano-addresses

library
  exposed-modules:
      Cardano.Address.JSAPI
      Cardano.Address.JSAPI.InspectAddress
      Cardano.Address.JSAPI.Version
  other-modules:
      Paths_cardano_addresses_jsapi
  hs-source-dirs:
      lib
  default-extensions:
      NoImplicitPrelude
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints
  js-sources:
      glue/test.js
  build-depends:
      aeson >= 2.0
    , aeson-pretty
    , base >=4.7 && <5
    , bytestring
    , cardano-addresses
    , cardano-addresses-cli
    , exceptions
    , jsaddle
    , lens
    , mtl
    , text
  if impl(ghcjs -any) || os(ghcjs)
    build-depends:
        cardano-addresses-jsbits
      , ghcjs-base
  default-language: Haskell2010

executable cardano-addresses-jsapi
  main-is: Main.hs
  other-modules:
      Paths_cardano_addresses_jsapi
  hs-source-dirs:
      exe
  default-extensions:
      NoImplicitPrelude
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints -no-hs-main
  build-depends:
      base >=4.7 && <5
    , cardano-addresses-jsapi
    , jsaddle
    , jsaddle-warp
    , lens
    , text
  if !(impl(ghcjs -any) || os(ghcjs))
    buildable: False
  default-language: Haskell2010

test-suite jsapi-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_cardano_addresses_jsapi
  hs-source-dirs:
      test
  default-extensions:
      NoImplicitPrelude
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints
  build-depends:
      base >=4.7 && <5
    , cardano-addresses-jsapi
    , jsaddle
    , jsaddle-warp
    , lens
    , text
  default-language: Haskell2010
