cabal-version: 1.12

name:           cardano-addresses-jsbits
version:        3.12.0
synopsis:       Javascript code for ghcjs build of cardano-addresses.
description:    This package supports ghcjs compilation of cardano-addresses with
                Javascript wrappers and Emscripten builds of the cryptonite C
                sources.
category:       Cardano
homepage:       https://github.com/IntersectMBO/cardano-addresses#readme
bug-reports:    https://github.com/IntersectMBO/cardano-addresses/issues
author:         IOHK
maintainer:     operations@iohk.io
copyright:      2021-2022 IOHK
license:        Apache-2.0
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/IntersectMBO/cardano-addresses

library
  exposed-modules:
      Cardano.Address.Jsbits
  hs-source-dirs:
      lib
  default-extensions:
      NoImplicitPrelude
  build-depends:
      base >=4.7 && <5
  if impl(ghcjs) || os(ghcjs)
    ghc-options: jsbits/cardano-crypto.js
    js-sources:
        jsbits/cardano-crypto.js
  default-language: Haskell2010
